[tool.poetry]
name = "qwen2-vl"
version = "0.1.0"
description = ""
authors = ["tuanshu <MY_NAME@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "3.1"
torch = { version = "2.4.0+cu121", source = "pytorch-cuda" }
torchvision = "0.19"
torchaudio = "2.4.0"
xformers = "0.0.27.post2"
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "19e6e80e10118f855137b90740936c0b11ac397f" }
accelerate = "*"
qwen-vl-utils = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"